# ducklearn

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
architecture/code_style/: index.html
architecture/pipeline/: index.html
docs/: .pages  api.md  charts.md  diagrams.md  index.md  snippets.md
docs/architecture/: .pages  code_style.md  pipeline.md
docs/assets/: styles.css
docs/guide/: index.md  usage.md
docs/snippets/: fragment.md  sql_example.sql
docs/tutorials/: .pages  test.md
ducklearn/: __init__.py
frontend/: package-lock.json  svelte.config.js
frontend/src/routes/: +layout.ts
macros/: main.py
reports/: tests.html
scripts/: sync_python_version.py
search/: search_index.json
src/backend/: __init__.py  app.py  main.py  main_dev.py
src/ducklearn/: __init__.py  core.py
src/frontend/: eslint.config.js  package-lock.json  package.json  prettier.config.cjs
src/frontend/src/routes/: +page.svelte
tests/: conftest.py  test_core.py
tests/backend/: test_smoke.py
tests/plugins/: __init__.py  html_report.py  options_env.py  rich_table.py
tutorials/test/: index.html
