################################################################################
#                                Project Metadata
################################################################################
[project]
name = "ducklearn"
version = "0.1.0"
description = """
DuckLearn is a high-performance machine learning toolkit that brings the
expressiveness of the scikit-learn API directly into DuckDB. It provides
powerful in-database feature engineering, fast SQL-accelerated model
evaluation, and seamless interoperability with pandas and NumPy. Designed
for modern analytics pipelines, DuckLearn enables scalable data
processing, efficient transformation workflows, and production-ready ML
components—all without leaving the DuckDB execution engine.
"""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.15"

license = { text = "Apache-2.0" }
authors = [{ name = "Tomas Pecukevicius", email = "contact@pecuk.dev" }]
keywords = ["duckdb", "machine-learning", "ml", "analytics", "scikit-learn", "data"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "duckdb>=1.4.3",
    "sqlglot[rs]>=28.4.1",
]

# ----------------------------------------------------------------------
# Project URLs
# ----------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/Tomosius/ducklearn"
Repository = "https://github.com/Tomosius/ducklearn"
Issues = "https://github.com/Tomosius/ducklearn/issues"

################################################################################
#                           Dependency Groups (PEP 735)
################################################################################
[dependency-groups]

# Code quality: linting, typing, doc quality, dead-code detection, metadata.
quality = [
    "docformatter>=1.7.7",
    "interrogate>=1.7.0",
    "mypy>=1.19.1",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.4",
    "pyroma>=5.0.1",
    "ruff>=0.14.9",
    "vulture>=2.14",
]

# Tests.
tests = [
    "coverage>=7.13.0",
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

# Documentation.
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]

# Developer workflow enforcement.
workflow = [
    "pre-commit>=4.5.1",
    "commitizen>=4.10.1",
]

# Build artifacts for publishing.
release = [
    "build>=1.3.0",
    "wheel>=0.45.1",
]

################################################################################
#                                Build System
################################################################################
[build-system]
requires = ["setuptools>=68", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

################################################################################
#                          Packaging Layout (src/)
################################################################################
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ducklearn*"]

################################################################################
#                             Commitizen
################################################################################
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"

################################################################################
#                                  Ruff
################################################################################
[tool.ruff]
line-length = 79
target-version = "py312"
respect-gitignore = true
fix = true
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I", "UP", "B", "S", "PL", "C4", "TID", "PERF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

################################################################################
#                                   Mypy
################################################################################
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

disallow_untyped_calls = false
disallow_untyped_decorators = false

################################################################################
#                                  Pyright
################################################################################
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true
reportUntypedFunctionDecorator = false
reportUnboundVariable = true

################################################################################
#                                  Vulture
################################################################################
[tool.vulture]
exclude = ["tests/*"]

################################################################################
#                                   Pytest
################################################################################
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".hypothesis", ".*", "build", "dist", "*.egg", "venv"]

################################################################################
#                                Coverage.py
################################################################################
[tool.coverage.run]
branch = true
source = ["src/ducklearn"]
parallel = false
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
precision = 2
skip_covered = false

################################################################################
#                                   Pylint
################################################################################
[tool.pylint]
ignore = ["build", "dist"]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = false
ignore-private = true
ignore-property-decorators = true
exclude = ["tests", "build", "dist", ".venv"]
